--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Musician & Creator</title>
+    <title>Mike Maguire - Musician & Creator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,11 +12,11 @@
             <h1>Your Name</h1>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#blog">Blog</a></li>
                 <li><a href="#music">Music</a></li>
-                <li><a href="#gigs">Gigs</a></li>
-                <li><a href="#photos">Photos</a></li>
                 <li><a href="#podcast">Podcast</a></li>
+                <li><a href="#gigs">Gigs</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#photos">Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
         <!-- Hero Section -->
         <section id="hero">
             <div class="hero-content">
-                <h2>Welcome to My Corner of the Web</h2>
+                <h2>Welcome to the Home of Mike Maguire / Heif Dogg</h2>
                 <p>Musician, podcaster, and creator. This is my space, free from algorithms.</p>
             </div>
         </section>
@@ -34,7 +34,25 @@
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Write a bit about yourself here - your musical background, what drives you, what Hoagie Time is all about, etc.</p>
+                <p>Mike Maguire
+
+(also known as Heif Dogg)
+
+I’m Mike Maguire. Musician, podcaster, writer, and someone who finally decided to stop renting space on the internet and build a home instead.
+
+This site exists because I wanted to get off social media without vanishing.
+
+I’ve spent years playing music in bars, breweries, backyards, living rooms, and rooms that feel electric for exactly the length of a good song. I write and perform original music, and I love reworking familiar songs until they feel alive again. I perform under my own name, and if I’m playing a show, releasing music, or trying something new, it’ll live here.
+
+Some people know me as Heif Dogg—that started as a nickname and stuck, especially on the Hoagie Time podcast, where I’m one of the voices. The show is part comedy, part conversation, part local culture, and part “how did this turn into that?” Episodes, clips, and updates are here so you don’t have to chase them around the internet.
+
+This site is the hub. Gigs, music, podcast stuff, photos, short writing, longer thoughts, and ideas that are still very much in progress. I’m not aiming for perfectly polished. I’m aiming for real, interesting, and moving forward.
+
+If you’re here to book a gig, listen to music, check out the podcast, read something, or just look around—welcome. Everything worth keeping ends up here.
+
+No algorithms. No endless scroll.
+Just the work, in one place.
+</p>
             </div>
         </section>
 
