--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@ Just the work, in one place.
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 Your Name. Built by me, owned by me.</p>
+            <p>&copy; 2026 Mike Maguire Built by me, owned by me.</p>
             <div class="footer-links">
-                <a href="mailto:your.email@example.com">Email</a>
+                <a href="mailto:mikemaguirephl@gmail.com">Email</a>
             </div>
         </div>
     </footer>
