--- a/index.html
+++ b/index.html
@@ -59,12 +59,7 @@
                 <h2>Music</h2>
                 <p>Check out my latest tracks and releases.</p>
                 <div class="music-player">
-                    <!-- You can embed players from SoundCloud, Bandcamp, Spotify, etc. here -->
-                    <p class="placeholder">🎵 Embed your music player here (SoundCloud, Bandcamp, YouTube, etc.)</p>
-                    <!-- Example for later:
-                    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
-                    src="https://w.soundcloud.com/player/?url=YOUR_TRACK_URL"></iframe>
-                    -->
+                    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4092421508/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://mikemaguire.bandcamp.com/album/right-on-time">Right On Time by Mike Maguire</a></iframe>
                 </div>
                 <div class="music-links">
                     <a href="#" class="button">Spotify</a>
