--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
                 <h2>Hoagie Time Podcast</h2>
                 <p>Listen to the latest episodes of Hoagie Time!</p>
                 <div class="podcast-player">
-  <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/show/4VMRmCAVZjIwiWuw17OJLO?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <iframe
+    style="border-radius:12px"
+    src="https://open.spotify.com/embed/show/4VMRnCAVZjIwiWu17OJL0?utm_source=generator"
+    width="100%"
+    height="152"
+    frameborder="0"
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+    loading="lazy">
+  </iframe>
 </div>
                 <div class="podcast-links">
                     <a href="#" class="button">Apple Podcasts</a>
