--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4092421508/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://mikemaguire.bandcamp.com/album/right-on-time">Right On Time by Mike Maguire</a></iframe>
                 </div>
                 <div class="music-links">
-                    <a href="#" class="button">Spotify</a>
-                    <a href="#" class="button">Bandcamp</a>
-                    <a href="#" class="button">SoundCloud</a>
+                    <a href="#" class="button">Apple</a>
+                    <a href="https://open.spotify.com/show/4VMRmCAVZjIwiWuw17OJLO" class="button">Spotify</a>
+                    <a href="#" class="button">Youtube</a>
                 </div>
             </div>
         </section>
@@ -76,19 +76,13 @@
                 <p>Listen to the latest episodes of Hoagie Time!</p>
                 <div class="podcast-player">
   <iframe
-    style="border-radius:12px"
-    src="https://open.spotify.com/embed/show/4VMRnCAVZjIwiWu17OJL0?utm_source=generator"
-    width="100%"
-    height="152"
-    frameborder="0"
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy">
+   
   </iframe>
 </div>
                 <div class="podcast-links">
-                    <a href="#" class="button">Apple Podcasts</a>
-                    <a href="#" class="button">Spotify</a>
-                    <a href="#" class="button">RSS Feed</a>
+                    <a href="https://podcasts.apple.com/us/podcast/hoagie-time-podcast/id1635952595" class="button">Apple Podcasts</a>
+                    <a href="https://open.spotify.com/show/4VMRmCAVZjIwiWuw17OJLO" class="button">Spotify</a>
+                    <a href="https://www.youtube.com/@hoagietime" class="button">YouTube</a>
                 </div>
             </div>
         </section>
