--- a/index.html
+++ b/index.html
@@ -74,8 +74,17 @@
             <div class="container">
                 <h2>Hoagie Time Podcast</h2>
                 <p>Listen to the latest episodes of Hoagie Time!</p>
-                <div class="podcast-player">
-  <iframe
+  <div class="podcast-player">
+      <iframe>
+        style="border-radius:12px"
+        src="https://open.spotify.com/embed/show/4VMRnCAVZjIwiWu17OJL0?utm_source=generator"
+        width="100%"
+        height="152"
+        frameborder="0"
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy">
+      </iframe>
+    </div>
    
   </iframe>
 </div>
