--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
         </section>
 
         <!-- Podcast Section -->
-        <section id="podcast">
-            <div class="container">
-                <h2>Hoagie Time Podcast</h2>
-                <p>Listen to the latest episodes of Hoagie Time!</p>
-  <div class="podcast-player">
-      <iframe>
+<section id="podcast">
+  <div class="container">
+    <h2>Hoagie Time Podcast</h2>
+    <p>Listen to the latest episodes of Hoagie Time!</p>
+
+    <div class="podcast-player">
+      <iframe
         style="border-radius:12px"
         src="https://open.spotify.com/embed/show/4VMRnCAVZjIwiWu17OJL0?utm_source=generator"
         width="100%"
@@ -85,16 +86,14 @@
         loading="lazy">
       </iframe>
     </div>
-   
-  </iframe>
-</div>
-                <div class="podcast-links">
-                    <a href="https://podcasts.apple.com/us/podcast/hoagie-time-podcast/id1635952595" class="button">Apple Podcasts</a>
-                    <a href="https://open.spotify.com/show/4VMRmCAVZjIwiWuw17OJLO" class="button">Spotify</a>
-                    <a href="https://www.youtube.com/@hoagietime" class="button">YouTube</a>
-                </div>
-            </div>
-        </section>
+
+    <div class="podcast-links">
+      <a href="https://podcasts.apple.com/us/podcast/hoagie-time-podcast/id1635952595" class="button" target="_blank" rel="noopener">Apple Podcasts</a>
+      <a href="https://open.spotify.com/show/4VMRnCAVZjIwiWu17OJL0" class="button" target="_blank" rel="noopener">Spotify</a>
+      <a href="https://www.youtube.com/@hoagietime" class="button" target="_blank" rel="noopener">YouTube</a>
+    </div>
+  </div>
+</section>
 
         <!-- Gigs Section -->
         <section id="gigs">
