--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </section>
 
         <!-- Podcast Section -->
+<!-- Podcast Section -->
 <section id="podcast">
   <div class="container">
     <h2>Hoagie Time Podcast</h2>
@@ -77,20 +78,37 @@
 
     <div class="podcast-player">
       <iframe
+        data-testid="embed-iframe"
         style="border-radius:12px"
-        src="https://open.spotify.com/embed/show/4VMRnCAVZjIwiWu17OJL0?utm_source=generator"
+        src="https://open.spotify.com/embed/show/4VMRmCAVZjIwiWuw17OJLO?utm_source=generator"
         width="100%"
         height="152"
         frameborder="0"
+        allowfullscreen
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
         loading="lazy">
       </iframe>
     </div>
 
     <div class="podcast-links">
-      <a href="https://podcasts.apple.com/us/podcast/hoagie-time-podcast/id1635952595" class="button" target="_blank" rel="noopener">Apple Podcasts</a>
-      <a href="https://open.spotify.com/show/4VMRnCAVZjIwiWu17OJL0" class="button" target="_blank" rel="noopener">Spotify</a>
-      <a href="https://www.youtube.com/@hoagietime" class="button" target="_blank" rel="noopener">YouTube</a>
+      <a href="https://podcasts.apple.com/us/podcast/hoagie-time-podcast/id1635952595"
+         class="button"
+         target="_blank"
+         rel="noopener">
+        Apple Podcasts
+      </a>
+      <a href="https://open.spotify.com/show/4VMRmCAVZjIwiWuw17OJLO"
+         class="button"
+         target="_blank"
+         rel="noopener">
+        Spotify
+      </a>
+      <a href="https://www.youtube.com/@hoagietime"
+         class="button"
+         target="_blank"
+         rel="noopener">
+        YouTube
+      </a>
     </div>
   </div>
 </section>
