--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4092421508/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://mikemaguire.bandcamp.com/album/right-on-time">Right On Time by Mike Maguire</a></iframe>
                 </div>
                 <div class="music-links">
-                    <a href="#" class="button">Apple</a>
-                    <a href="https://open.spotify.com/show/4VMRmCAVZjIwiWuw17OJLO" class="button">Spotify</a>
-                    <a href="#" class="button">Youtube</a>
+                    <a href="https://music.apple.com/us/album/right-on-time/561511323" class="button">Apple</a>
+                    <a href="https://open.spotify.com/album/4UL7AbuglGYoz45yzCY5x9" class="button">Spotify</a>
+                    <a href="https://mikemaguire.bandcamp.com" class="button">Bandcamp</a>
                 </div>
             </div>
         </section>
