--- a/index.html
+++ b/index.html
@@ -114,26 +114,34 @@
 </section>
 
         <!-- Gigs Section -->
-        <section id="gigs">
-            <div class="container">
-                <h2>Upcoming Gigs</h2>
-                <div class="gig-list">
-                    <div class="gig">
-                        <h3>Venue Name</h3>
-                        <p class="gig-date">February 15, 2026 - 8:00 PM</p>
-                        <p class="gig-location">City, State</p>
-                        <a href="#" class="button">Get Tickets</a>
-                    </div>
-                    
-                    <div class="gig">
-                        <h3>Another Venue</h3>
-                        <p class="gig-date">March 2, 2026 - 9:00 PM</p>
-                        <p class="gig-location">City, State</p>
-                        <a href="#" class="button">Get Tickets</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+<section id="gigs">
+  <div class="container">
+    <h2>Upcoming Gigs</h2>
+
+    <div class="gig">
+      <span class="gig-date">Feb 3, 2026</span>
+      <span class="gig-time">5:30 – 7:30 PM</span>
+      <span class="gig-venue">Dom & Mia's</span>
+      <span class="gig-location">Springfield, PA</span>
+    </div>
+
+    <div class="gig">
+      <span class="gig-date">Feb 6, 2026</span>
+      <span class="gig-time">8:00 – 11:00 PM</span>
+      <span class="gig-venue">Saxer's</span>
+      <span class="gig-location">Springfield, PA</span>
+    </div>
+
+      <div class="gig">
+      <span class="gig-date">Feb 7, 2026</span>
+      <span class="gig-time">6:00 – 9:00 PM</span>
+      <span class="gig-venue">Barnaby's Aston</span>
+      <span class="gig-location">Aston, PA</span>
+    </div>
+      
+
+  </div>
+</section>
 
         <!-- Contact/Booking Section -->
         <section id="contact">
