--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                 <p>Interested in booking me for a show? Fill out the form below and I'll get back to you soon.</p>
                 
                 <form action="https://formspree.io/f/mzdrovod" method="POST" class="contact-form">
+  <input type="hidden" name="_subject" value="New Gig Inquiry from mikemaguire site">
+  <input type="hidden" name="_redirect" value="thanks.html">
+  <input type="text" name="_gotcha" style="display:none">
                     <div class="form-group">
                         <label for="name">Name *</label>
                         <input type="text" id="name" name="name" required>
