--- a/index.html
+++ b/index.html
@@ -1,324 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mike Maguire | Delco Music, Podcast, Gigs</title>
-
-  <!-- Fonts: heritage heading + modern body -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    :root {
-      --cream: #f6f2eb;
-      --paper: #ffffff;
-      --ink: #1a1a1a;
-      --navy: #1f2a44;
-      --burgundy: #7a1f2b;
-      --gold: #d4af37;
-      --shadow: 0 10px 30px rgba(0,0,0,0.10);
-      --radius: 14px;
-      --max: 1040px;
-    }
-
-    * { box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
-    body {
-      margin: 0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: var(--cream);
-      color: var(--ink);
-      line-height: 1.6;
-    }
-
-    a { color: inherit; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-
-    .container {
-      width: min(var(--max), calc(100% - 32px));
-      margin: 0 auto;
-    }
-
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 50;
-      background: rgba(246, 242, 235, 0.92);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(0,0,0,0.08);
-    }
-
-    nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-      padding: 14px 0;
-    }
-
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      min-width: 220px;
-    }
-
-    .brand-mark {
-      width: 34px;
-      height: 34px;
-      border-radius: 50%;
-      border: 2px solid rgba(0,0,0,0.12);
-      background: var(--paper);
-      object-fit: cover;
-    }
-
-    .brand-title {
-      font-family: Cinzel, serif;
-      letter-spacing: 0.04em;
-      color: var(--navy);
-      font-weight: 700;
-      margin: 0;
-      font-size: 18px;
-      line-height: 1.1;
-    }
-
-    .brand-subtitle {
-      margin: 0;
-      font-size: 12px;
-      color: rgba(0,0,0,0.70);
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 14px;
-      padding: 0;
-      margin: 0;
-      flex-wrap: wrap;
-      justify-content: flex-end;
-    }
-
-    .nav-links a {
-      font-weight: 600;
-      color: rgba(0,0,0,0.72);
-      padding: 8px 10px;
-      border-radius: 10px;
-    }
-
-    .nav-links a:hover {
-      background: rgba(31, 42, 68, 0.08);
-      text-decoration: none;
-      color: var(--navy);
-    }
-
-    section {
-      padding: 64px 0;
-      border-top: 1px solid rgba(0,0,0,0.06);
-    }
-
-    .card {
-      background: var(--paper);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 24px;
-      border: 1px solid rgba(0,0,0,0.06);
-    }
-
-    .hero {
-      padding: 70px 0 54px;
-      border-top: none;
-    }
-
-    .hero-grid {
-      display: grid;
-      grid-template-columns: 360px 1fr;
-      gap: 28px;
-      align-items: center;
-    }
-
-    .hero-logo {
-      width: 100%;
-      max-width: 360px;
-      display: block;
-      margin: 0 auto;
-      border-radius: 18px;
-      background: var(--paper);
-      border: 1px solid rgba(0,0,0,0.08);
-      box-shadow: var(--shadow);
-    }
-
-    .hero h1 {
-      font-family: Cinzel, serif;
-      color: var(--navy);
-      letter-spacing: 0.04em;
-      font-size: 44px;
-      margin: 0 0 10px;
-      line-height: 1.05;
-    }
-
-    .hero .tagline {
-      font-size: 18px;
-      color: rgba(0,0,0,0.75);
-      margin: 0 0 18px;
-    }
-
-    .hero .cta-row {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      margin-top: 18px;
-    }
-
-    .button {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      padding: 12px 18px;
-      border-radius: 10px;
-      border: 2px solid var(--burgundy);
-      background: var(--burgundy);
-      color: #fff;
-      font-weight: 700;
-      letter-spacing: 0.05em;
-      text-transform: uppercase;
-      cursor: pointer;
-      transition: transform 0.05s ease, background 0.15s ease, border-color 0.15s ease;
-      text-decoration: none;
-    }
-
-    .button:hover {
-      background: var(--gold);
-      border-color: var(--gold);
-      color: #000;
-      text-decoration: none;
-    }
-
-    .button.secondary {
-      background: transparent;
-      color: var(--navy);
-      border-color: rgba(31, 42, 68, 0.35);
-    }
-
-    .button.secondary:hover {
-      background: rgba(31, 42, 68, 0.08);
-      border-color: rgba(31, 42, 68, 0.55);
-      color: var(--navy);
-    }
-
-    h2 {
-      font-family: Cinzel, serif;
-      color: var(--navy);
-      letter-spacing: 0.04em;
-      margin: 0 0 12px;
-      font-size: 30px;
-    }
-
-    .section-lead {
-      margin: 0 0 20px;
-      color: rgba(0,0,0,0.72);
-      font-size: 16px;
-    }
-
-    .rule {
-      height: 3px;
-      width: 86px;
-      background: var(--gold);
-      border-radius: 999px;
-      margin: 10px 0 18px;
-    }
-
-    .embed-frame {
-      border: 0;
-      width: 100%;
-      border-radius: 12px;
-      background: #fff;
-    }
-
-    .links-row {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      margin-top: 16px;
-    }
-
-    .gig-list {
-      display: grid;
-      gap: 14px;
-    }
-
-    .gig {
-      padding: 18px;
-      border-radius: 12px;
-      border: 1px solid rgba(0,0,0,0.08);
-      background: rgba(255,255,255,0.72);
-    }
-
-    .gig-top {
-      display: flex;
-      gap: 12px;
-      align-items: baseline;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-
-    .gig h3 {
-      margin: 0;
-      font-size: 18px;
-      color: var(--navy);
-      font-weight: 800;
-    }
-
-    .gig-meta {
-      display: grid;
-      grid-template-columns: 140px 160px 1fr;
-      gap: 10px;
-      margin-top: 10px;
-      color: rgba(0,0,0,0.75);
-      font-weight: 600;
-    }
-
-    .gig-label {
-      font-size: 12px;
-      text-transform: uppercase;
-      letter-spacing: 0.06em;
-      color: rgba(0,0,0,0.55);
-      font-weight: 800;
-      margin-bottom: 3px;
-    }
-
-    .gig-actions {
-      margin-top: 14px;
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-
-    form.contact-form {
-      display: grid;
-      gap: 14px;
-    }
-
-    .form-group label {
-      display: block;
-      font-weight: 800;
-      margin-bottom: 6px;
-      color: rgba(0,0,0,0.78);
-    }
-
-    .form-group input,
-    .form-group textarea {
-      width: 100%;
-      padding: 12px 12px;
-      border-radius: 10px;
-      border: 1px solid rgba(0,0,0,0.18);
-      background: #fff;
-      font-size: 15px;
-    }
-
-    .radio-group {
-      display: flex;
-      gap: 14px;
-      flex-wrap
+  <meta charset="UTF-8">
+  <title>Test</title>
+</head>
+<body>
+  <h1>If you see this, HTML is working</h1>
+  <p>Your page was broken in the &lt;head&gt; section.</p>
+</body>
+</html>
