--- a/index.html
+++ b/index.html
@@ -94,13 +94,18 @@
     <h2>Live Dates</h2>
 
     <div class="gig">
-      <strong>Feb 15, 2026</strong> — 8:00 PM<br>
-      <span>Venue Name · City, State</span>
+      <strong>Feb 3, 2026</strong> — 5:30 PM<br>
+      <span>Dom & Mia's · Springfield, PA</span>
     </div>
 
     <div class="gig">
-      <strong>Mar 2, 2026</strong> — 9:00 PM<br>
-      <span>Another Venue · City, State</span>
+      <strong>Feb 6, 2026</strong> — 8:00 PM<br>
+      <span>Saxer's · Springfield, PA</span>
+    </div>
+
+    <div class="gig">
+      <strong>Feb 7, 2026</strong> — 6:00 PM<br>
+      <span>Barnaby's · Aston, PA</span>
     </div>
 
     <p class="note">
